INSPECTIT-2011: Updated commons.cs, server and ui to java 8, switched to Zulu