@@ -5,14 +5,12 @@
 ext {
 	serverJavaCommandLinux = './jre/bin/java'
 	serverJavaCommandWin = 'jre\\\\bin\\\\java.exe'
-	serverJavaMemory32bit = '-Xms1024m -Xmx1024m -Xmn384M -XX:MaxPermSize=128m -XX:PermSize=128m'
-	serverJavaMemory64bit = '-Xms1536m -Xmx1536m -Xmn512M -XX:MaxPermSize=192m -XX:PermSize=128m'
-	serverJavaOpts32bit = '-XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=80 -XX:+UseCMSInitiatingOccupancyOnly -XX:+UseParNewGC -XX:+CMSParallelRemarkEnabled -XX:+DisableExplicitGC -XX:SurvivorRatio=4 -XX:TargetSurvivorRatio=90 -XX:BiasedLockingStartupDelay=500 -XX:+UseFastAccessorMethods -XX:+UseBiasedLocking -XX:+HeapDumpOnOutOfMemoryError'
+	serverJavaMemory64bit = '-Xms1536m -Xmx1536m -Xmn512M'
 	serverJavaOpts64bit = '-XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=80 -XX:+UseCMSInitiatingOccupancyOnly -XX:+UseParNewGC -XX:+CMSParallelRemarkEnabled -XX:+DisableExplicitGC -XX:SurvivorRatio=5 -XX:TargetSurvivorRatio=90 -XX:AutoBoxCacheMax=20000 -XX:BiasedLockingStartupDelay=500 -XX:+UseFPUForSpilling -XX:+UseFastAccessorMethods -XX:+UseBiasedLocking -XX:+UseCompressedOops -XX:+HeapDumpOnOutOfMemoryError'
 	serverJavaOptsLinux = '-server'
 	serverJavaOptsWin = ''
-	serverJavaLocgcLinux = '-verbose:gc -XX:+PrintGCTimeStamps -XX:+PrintGCDetails -XX:+PrintTenuringDistribution -Xloggc:logs/gc.log'
-	serverJavaLocgcWin = '-verbose:gc -XX:+PrintGCTimeStamps -XX:+PrintGCDetails -XX:+PrintTenuringDistribution -Xloggc:logs\\\\gc.log'
+	serverJavaLocgcLinux = '-verbose:gc -XX:+PrintGCTimeStamps -XX:+PrintGCDetails -XX:+PrintTenuringDistribution -XX:+UseGCLogFileRotation -Xloggc:logs/gc.log'
+	serverJavaLocgcWin = '-verbose:gc -XX:+PrintGCTimeStamps -XX:+PrintGCDetails -XX:+PrintTenuringDistribution -XX:+UseGCLogFileRotation -Xloggc:logs\\\\gc.log'
 
 	serverJavaOptsForTests = ['-XX:+UseConcMarkSweepGC', '-XX:CMSInitiatingOccupancyFraction=80', '-XX:+UseCMSInitiatingOccupancyOnly', '-XX:+UseParNewGC', '-XX:+CMSParallelRemarkEnabled', '-XX:+DisableExplicitGC', '-XX:SurvivorRatio=4', '-XX:TargetSurvivorRatio=90', '-XX:BiasedLockingStartupDelay=500', '-XX:+UseFastAccessorMethods', '-XX:+UseBiasedLocking', '-XX:+HeapDumpOnOutOfMemoryError']
 }
